# Curio

./: .gitignore  .rustc_info.json  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eg.txt  index.html  ref.txt  test.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  codevoc.yml  rust.yml
docs/: rustdoc.css  search-index.js  settings.html
docs/0.0.1/: landing.html
docs/0.0.3/: .rustc_info.json  search-index.js  source-files.js
docs/0.0.3/curio/: all.html  index.html  sidebar-items.js
docs/0.0.3/curio/structs/: enum.BodyType.html  index.html  sidebar-items.js  struct.Cookie.html  struct.CurioConfig.html  struct.Header.html  struct.PostData.html  struct.Request.html  struct.Response.html  struct.WarpConfig.html
docs/0.0.3/curio/tcp/: fn.delete.html  fn.get.html  fn.head.html  fn.options.html  fn.post.html  index.html
docs/0.0.3/doc/: search-index.js  settings.html
docs/latest/: all.html  index.html
docs/latest/prelude/: index.html
docs/latest/structs/: enum.DataType.html  enum.HTTPVersion.html  enum.RequestType.html  index.html  struct.Cookie.html  struct.CurioConfig.html  struct.Header.html  struct.PostData.html  struct.Request.html  struct.Response.html
docs/src/curio/: lib.rs.html  prelude.rs.html  structs.rs.html  tcp.rs.html  tls.rs.html  utils.rs.html
src/: benchmarks.rs  client.rs  definitions.rs  lib.rs  prelude.rs  structs.rs  tcp.rs  tests.rs  tls.rs  types.rs  utils.rs
src/definitions/: client.rs  connection.rs  connection_state.rs  domain.rs  protocol.rs  uniform_resource_identifier.rs
src/structs/: errors.rs
src/tests/: client_methods.rs  components.rs  connections.rs  parsers.rs  request_builder.rs  tcp_methods.rs  tls_methods.rs
src/tests/components/: uri.rs
src/utils/: parsers.rs
static/css/: home.css  reusables.css
(+113 files in other folders)
